Remove redundant config
